<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="General">
        <menu>
            <item
                android:id="@+id/nav_eventselection"
                android:title="Event Selection" />
            <item
                android:id="@+id/nav_import"
                android:title="Import" />
        </menu>
    </item>

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_logout"
            android:title="Logout" />

    </group>

</menu>
