...
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/login_action_sign_in"
                android:textStyle="bold" />

            <Button
                android:id="@+id/skipbutton_admin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:text="skip Login (as Admin)" />

...
